--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 	</nav>
 
 
-<script type="text/javascript" src="js/jquery-3.3.1.min.js/"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous">
+</script>
 <script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
